--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,6 +24,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PZ'
 - !lcsh 'Children''s literature'
+- GITenberg
 title: "Types of Children's Literature\r\nA Collection of the World's Best Literature\
   \ for Children, For Use in Colleges, Normal Schools and Library Schools"
 url: http://www.gutenberg.org/ebooks/6588
